syntax = "proto3";
option csharp_namespace = "NAGP.Orders.Service";
package Orders;

import "Protos/google/api/annotations.proto";

//*** Orders 
service Orders {
	//**** Create order with product details, returns status for order
	rpc CreateOrder (OrderDetails) returns (OrderResponse) {
		option (google.api.http) = {
			post: "/v1/orders"
			body: "*"
		};
	}

	//**** Update order with product details and return order response
	rpc UpdateOrder (OrderDetails) returns (OrderResponse) {
		option (google.api.http) = {
			put: "/v1/orders/{Id}"
			body: "*"
		};
	}
}

//**** Model for OrderDetails
message OrderDetails {
	ProductDetails Product = 1;
	int32 Quantity = 2;
	int32 Id = 3;
}

//**** Model for Product details 
message ProductDetails {
	int32 Id = 1;
	string Color = 2;
	string Name = 3;
	string Description = 4;
}

//**** Model for order response
message OrderResponse {
	bool IsSuccess = 1;
	string Message = 2;
}